Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2024/02/22:
- TestEngine: fixed MenuCheckAll(), MenuUncheckAll(), MenuActionAll() from trying to
  perform actions on disabled menu items.

2024/02/07:
- TestEngine: fixed ImBuildFindGitBranchName() helper and auto-filling of io.GitBranchName
  when using a detached head. (#42)

2024/01/25:
- TestEngine: Submitting a ImGuiKey_LeftAlt/ImGuiKey_RightAlt, ImGuiKey_LeftShift/ImGuiKey_RightShift,
  ImGuiKey_LeftCtrl/ImGuiKey_RightCtrl, ImGuiKey_LeftSuper/ImGuiKey_RightSuper key interaction
  will submit the equivalent ImGuiMod_XXX mod, as what would happen in a real backend.
- TestEngine: ...also done in the opposite direction: submitting e.g. ImGuiMod_XXX automatically
  adds ImGuiKey_LeftXXX.

2024/01/16:
- TestEngine: Fixes crash when running an ImGui instanced compiled with IMGUI_ENABLE_TEST_ENGINE
  but before a test engine has been attached to the ImGuiContext.

2024/01/15:
- TestEngine: Fixes for GetKeyChordName() api changes.

2024/01/09:
- TestEngine: Added ImGuiTestContext::KeySetEx() to manipulate keys with precise timings.
  (most other functions add yields to accomodate for common use cases).
- app_minimal: Added a building batch file to provide an alternative building reference.
- app_minimal: Removed misleading optional dependency on implot.
- app_minimal, imgui_app: Fixed building in MBCS (non-Unicode) mode.

2024/01/08:
- TestEngine: Avoid allocations in IM_CHECK_XX macros.

2023/12/05:
- TestEngine: Made it possible to use ctx->RunChildTest() along with ctx->Finish(ImGuiTestStatus_Unknown)
  to setup test dependencies without marking dependent tests as errored when the dependance is errored.

2023/11/30:
- TestEngine: Added ImGuiTestContext::RunChildTest() [Experimental].